[tool.poetry]
name = "bdo-coupon-scanner"
version = "0.4.9"
description = "A library that scans for Black Desert Online coupon codes."
authors = ["Frederik P. <frepbh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <4.0"
snscrape = "^0.7"
selenium = "^4.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
